@@ -67,6 +67,16 @@ if [expr ([istarget "i*86-*-*"] ||  [istarget "x86_64-*-*"]) && [gas_32_check]] 
 	run_dump_test "jump16"
 	run_list_test "white" "-al --listing-lhs-width=3"
     }
+
+    # Do they only work for ELF?
+    if { ([istarget "*-*-elf*"]		
+	  || [istarget "*-*-linux*"]
+	 && ![istarget *-*-linux*aout*]
+	 && ![istarget *-*-linux*oldld*])
+    } then {
+	run_dump_test "relax"
+    }
+
     set ASFLAGS "$old_ASFLAGS"
 }
 
