@@ -1,0 +1,10 @@
+#name: i386 relax
+#objdump: -drw
+
+.*: +file format .*i386.*
+
+Disassembly of section .text:
+Disassembly of section .gnu.linkonce.t.blah:
+
+0+000 <.gnu.linkonce.t.blah>:
+   0:	eb 00 [ 	]*jmp    0x2
